--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -9,12 +9,13 @@
 /* @import 'base/forms.css'; */
 
 /* Components */
-/* @import 'cmps/AppHeader.css'; */
+@import 'cmps/AppHeader.css';
 @import 'cmps/UserMsg.css';
 
 /* @import 'cmps/ToyList.css'; */
 @import 'cmps/ToyPreview.css';
-@import 'cmps/Charts.css'
-/* @import 'cmps/ToyFilter.css'; */
+@import 'cmps/ToyFilter.css';
+@import 'cmps/ToySort.css';
+@import 'cmps/Charts.css';
 
 /* @import 'cmps/ShoppingCart.css'; */
